# codecks-cli

./: .cli_feedback.json  .cursorrules  .dockerignore  .env.example  .gitattributes  .gitignore  .pm_claims.json  .pm_last_result.json  .pm_undo.json  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  HANDOFF.md  PLAN-fix-archived-project-filtering.md  PM_AGENT_WORKFLOW.md  PROJECT_INDEX.md  README.md  SECURITY.md  api.py  cards.py  codecks.sh  codecks_api.py  commands.py  config.py  docker-compose.yml  formatters.py  gdd.py  models.py  pyproject.toml  setup_wizard.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backup-docs.yml  test.yml
codecks_cli/: __init__.py  _content.py  _last_result.py  _operations.py  _utils.py  admin.py  api.py  attachments.py  cards.py  cli.py  client.py  commands.py  config.py  endpoint_cache.py  exceptions.py  formatters.py  gdd.py  lanes.py  mcp_server.py  models.py  planning.py  playwright_admin.py  playwright_selectors.json  pm_playbook.md  scaffolding.py  setup_wizard.py  store.py  tags.py  types.py
codecks_cli/formatters/: __init__.py  _activity.py  _cards.py  _core.py  _dashboards.py  _entities.py  _gdd.py  _table.py
codecks_cli/mcp_server/: __init__.py  __main__.py  _core.py  _prompts.py  _repository.py  _security.py  _tools_admin.py  _tools_comments.py  _tools_local.py  _tools_read.py  _tools_team.py  _tools_write.py
docker/: build.sh  claude.sh  cli.sh  dev.sh  logs.sh  mcp-http.sh  mcp.sh  quality.sh  shell.sh  test.sh
docs/: ai-agent-guide.md  cli-reference.md  mcp-reference.md
docs/plans/: 2026-03-07-defensive-error-handling-plan.md  2026-03-07-mcp-agent-acceleration-design.md  2026-03-07-mcp-agent-acceleration-plan.md
examples/: README.md  game-dev-agent.md
examples/skills/pm/: SKILL.md
examples/skills/setup/: SKILL.md
scripts/: project_meta.py  quality_gate.py  run-tests.ps1  run_mcp_http.py  validate_docs.py
tests/: conftest.py  test_api.py  test_attachments.py  test_cards.py  test_cli.py  test_client.py  test_commands.py  test_config.py  test_content.py  test_exceptions.py  test_formatters.py  test_gdd.py  test_lanes.py  test_mcp_cache.py  test_mcp_prompts.py  test_mcp_server.py  test_models.py  test_operations.py  test_planning.py  test_repository.py  test_scaffolding.py  test_setup_wizard.py  test_store.py  test_tags.py
