[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codecks-cli"
version = "0.4.0"
description = "CLI tool for managing Codecks.io project cards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]
mcp = [
  "mcp[cli]>=1.6.0",
]

[tool.setuptools.package-data]
codecks_cli = ["py.typed"]

[tool.setuptools.packages.find]
include = ["codecks_cli", "codecks_cli.*"]

[project.urls]
Repository = "https://github.com/rangogamedev/codecks-cli"

[project.scripts]
codecks-cli = "codecks_cli.cli:main"
codecks-mcp = "codecks_cli.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".git",
  ".pytest_cache",
  ".tmp",
  "__pycache__",
  "build",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = "(^tests/|^\\.tmp/)"
