[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "codecks-cli"
version = "0.5.0"
description = "CLI, Python API, and MCP server for Codecks.io project management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []
authors = [{name = "rangogamedev"}]
keywords = ["codecks", "project-management", "cli", "mcp", "game-dev"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "mypy>=2.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.13",
  # pip-audit scans installed deps against the PyPI/OSV advisory DBs.
  # Wired into CI and `quality_gate.py --audit` (see scripts/quality_gate.py).
  "pip-audit>=2.7.3",
  # mcp[cli] provides the MCP SDK's `mcp dev`/Inspector dev console.
  # Shipped installs use the slim base `mcp` (see the `mcp` extra below).
  "mcp[cli]>=1.27.1",
]
mcp = [
  "mcp>=1.27.1",
]

[tool.setuptools.package-data]
codecks_cli = ["py.typed", "pm_playbook.md"]

[tool.setuptools.packages.find]
include = ["codecks_cli", "codecks_cli.*"]

[project.urls]
Repository = "https://github.com/rangogamedev/codecks-cli"
Changelog = "https://github.com/rangogamedev/codecks-cli/blob/main/CHANGELOG.md"
Issues = "https://github.com/rangogamedev/codecks-cli/issues"

[project.scripts]
codecks-cli = "codecks_cli.cli:main"
codecks-mcp = "codecks_cli.mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
  ".git",
  ".pytest_cache",
  ".tmp",
  ".venv",
  "__pycache__",
  "build",
  "contract_tmp",
  "tmp_pytest_*",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "E501",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = "(^tests/|^\\.tmp/)"
